--- a/index.html
+++ b/index.html
@@ -441,14 +441,14 @@
                     <h3>Santiago David Cabrera Díaz</h3>
                     <p class="role">CTO - Director de Tecnología</p>
                     <p>Lidera el desarrollo web, infraestructura tecnológica y seguridad de datos. Ingeniera de Sistemas con 5 años de experiencia en desarrollo de plataformas.</p>
-                    <p><strong>Contacto:</strong> maria.lopez@segurapp.pe</p>
+                    <p><strong>Contacto:</strong> Santiago.Cabrera@segurapp.pe</p>
                 </div>
                 
                 <div class="member">
                     <h3>Marcelo Gustavo Aliaga Garcia</h3>
                     <p class="role">CMO - Director de Marketing</p>
                     <p>Encargado de la identidad de marca, marketing digital y expansión comercial. Comunicador Social con maestría en Marketing Digital.</p>
-                    <p><strong>Contacto:</strong> carlos.mendoza@segurapp.pe</p>
+                    <p><strong>Contacto:</strong> GustavoA@segurapp.pe</p>
                 </div>
             </div>
         </section>
@@ -476,3 +476,4 @@
 </body>
 
 </html>
+
